--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
-    "express": "^4.18.2",
-    "path": "^0.12.7"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -10,8 +9,7 @@
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
-  
-    "start": "nodemon UsingParams.js"
+    "start": "nodemon Main.js"
   },
   "keywords": [],
   "author": "",
